--- a/views/auth/index.ejs
+++ b/views/auth/index.ejs
@@ -63,6 +63,7 @@
                                         <div style="text-align: center; margin: 10px 0;">
                                             <span style="color: red; font-size: 15px; "><%= success %></span>
                                         </div>
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </button>
