--- a/views/static/component/header.ejs
+++ b/views/static/component/header.ejs
@@ -4,11 +4,12 @@
 			<div class="col-md-8">
 				<div class="user-menu">
 					<ul>
-						<li><a href="#"><i class="fa fa-user"></i> My Account</a></li>
-						<li><a href="#"><i class="fa fa-heart"></i> Wishlist</a></li>
-						<li><a href="cart.html"><i class="fa fa-user"></i> My Cart</a></li>
-						<li><a href="checkout.html"><i class="fa fa-user"></i> Checkout</a></li>
-						<li><a href="#"><i class="fa fa-user"></i> Login</a></li>
+						<% if(user) { %>
+							<li><a href="#"><i class="fa fa-user"></i> <%= user.username %></a></li>
+							<li><a href="/auth/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
+						<% } else { %>
+							<li><a href="/auth/login"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></li>
+						<% } %>
 					</ul>
 				</div>
 			</div>
